v. 6.3.6 - VTopo series prefix; Diving mode data reduction. Meridian convergence